--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,5 +1,5 @@
 <div class="container text-center">
 	
-	<a href="/auth/youtube/" class="btn btn-lg btn-primary">Login with youtube</a>
+	<a href="/auth/youtube/" class="btn btn-lg btn-primary btn-login">Login with youtube</a>
 
 </div> <!-- /container -->
