--- a/app/views/videos.html
+++ b/app/views/videos.html
@@ -1,29 +1,56 @@
-<h1 class="page-header">Youtube Box <span class="text-muted">{{videos.length}}</span></h1>
+
+<div class="control">
+	<h1 class="page-header">
+		Youtube Box <span class="text-muted videos">{{videos.length}}</span>
+	</h1>
+	
+	<form class="form-inline">
+		<select name="sort" class="form-control sort">
+			<option value="">Sort</option>
+			<option value="old" {{selected "old" sort}}>Oldest First</option>
+			<option value="views" {{selected "views" sort}}>More Views</option>
+			<option value="duration" {{selected "duration" sort}}>Duration</option>
+		</select>
+		
+		<button class="btn btn-default watched-all ">mark all as watched</button>
+	</form>
+</div>
+
 
 <div class="row">
 	{{#videos}}
-		<div class="col-sm-6 col-md-4 col-lg-3">
+		<div class="col-sm-6 col-md-4 col-lg-3 video" data-id="{{id}}">
 			<div class="thumbnail">
-				<a href="https://www.youtube.com/watch?v={{id}}" title="{{title}}">
-					<img src="https://i.ytimg.com/vi/{{id}}/hqdefault.jpg" alt="{{title}}">
+				<a href="https://www.youtube.com/channel/{{channel.id}}" title="{{channel.title}}" class="channel">
+					<img src="{{channel.thumbnail}}" alt="{{channel.title}}" />
+					<span>{{channel.title}}</span>
 				</a>
+					
+				<a href="https://www.youtube.com/watch?v={{id}}" title="{{title}}" class="thumb">
+					<img src="https://i.ytimg.com/vi/{{id}}/mqdefault.jpg" alt="{{title}}">
+					<figcaption>{{formatTime duration}}</figcaption>
+				</a>
+				
+				{{#if likes}}
+					<div class="progress">
+						<div class="progress-bar progress-bar-{{formatRatingValue likes dislikes}}" role="progressbar" aria-valuenow="{{formatRating likes dislikes}}" aria-valuemin="0" aria-valuemax="100" style="width: {{formatRating likes dislikes}}%">
+							{{formatRating likes dislikes}}%
+						</div>
+					</div>
+				{{/if}}
+					
 				<div class="caption">
 					<h3><a href="https://www.youtube.com/watch?v={{id}}" title="{{title}}">{{title }}</a></h3>
 					
-					<a href="https://www.youtube.com/channel/{{channel.id}}" title="{{channel.title}}" class="channel">
-						<img src="{{channel.thumbnail}}" alt="{{channel.title}}">
-						<span>{{channel.title}}</span>
-					</a>
-					
-					<div class="info">
-						<p>Duração: {{formatTime duration}}</p>
-						<p>Visualizações: {{viewCount}}</p>
-						<p>Likes: {{likeCount}}</p>
+					<div class="info clearfix">
+						<p class="pull-left"><strong>Published:</strong> {{formatDate published}}</p>
+						<p class="pull-right"><strong>Views:</strong> {{formatLargeNumber views 1}}</p>
 					</div>
 					
-					<p>{{{formatHTML description}}}</p>
+					<p class="description">{{{formatHTML description}}}</p>
 					<p>
 						<a href="https://www.youtube.com/watch?v={{id}}" class="btn btn-primary" role="button" target="_blank">Watch</a>
+						<button class="btn btn-default watched" role="button">mark as watched</button>
 					</p>
 				</div>
 			</div>
