--- a/app/views/templates/main.html
+++ b/app/views/templates/main.html
@@ -27,7 +27,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="#">Youtube Box</a>
+					<a class="navbar-brand" href="/">Youtube Box</a>
 				</div>
 				<div id="navbar" class="navbar-collapse collapse">
 					<ul class="nav navbar-nav navbar-right">
