--- a/app/views/videos.html
+++ b/app/views/videos.html
@@ -1,18 +1,27 @@
 
-<div class="control">
-	<h1 class="page-header">
+<div class="row page-header">
+	<h1 class="col-sm-6">
 		Youtube Box <span class="text-muted videos">{{videos.length}}</span>
 	</h1>
 	
-	<form class="form-inline">
+	<form class="col-sm-6 text-right form-inline filter">
+		
+		<div class="input-group">
+			<input type="search" name="search" value="{{search}}" results="5" placeholder="Search by title" class="form-control search" />
+			<div class="input-group-btn">
+				<button  type="submit" role="submit" class="btn btn-default"><i class="glyphicon glyphicon-search"></i></button>
+			</div>
+		</div>
+		
 		<select name="sort" class="form-control sort">
-			<option value="">Sort</option>
-			<option value="old" {{selected "old" sort}}>Oldest First</option>
-			<option value="views" {{selected "views" sort}}>More Views</option>
-			<option value="duration" {{selected "duration" sort}}>Duration</option>
+			<option value="-published" {{selected "-published" sort}}>Newest</option>
+			<option value="published" {{selected "published" sort}}>Oldest</option>
+			<option value="-views" {{selected "-views" sort}}>Views</option>
+			<option value="-duration" {{selected "-duration" sort}}>Longest</option>
+			<option value="duration" {{selected "duration" sort}}>Shortest</option>
 		</select>
 		
-		<button class="btn btn-default watched-all ">mark all as watched</button>
+		<button class="btn btn-default watched-all" role="button">mark all as watched</button>
 	</form>
 </div>
 
@@ -26,8 +35,8 @@
 					<span>{{channel.title}}</span>
 				</a>
 					
-				<a href="https://www.youtube.com/watch?v={{id}}" title="{{title}}" class="thumb">
-					<img src="https://i.ytimg.com/vi/{{id}}/mqdefault.jpg" alt="{{title}}">
+				<a href="{{youtubeVideo id}}" title="{{title}}" class="thumb">
+					<img src="https://i.ytimg.com/vi/{{id}}/mqdefault.jpg" alt="{{title}}" />
 					<figcaption>{{formatTime duration}}</figcaption>
 				</a>
 				
@@ -40,7 +49,7 @@
 				{{/if}}
 					
 				<div class="caption">
-					<h3><a href="https://www.youtube.com/watch?v={{id}}" title="{{title}}">{{title }}</a></h3>
+					<h3><a href="{{youtubeVideo id}}" title="{{title}}">{{title }}</a></h3>
 					
 					<div class="info clearfix">
 						<p class="pull-left"><strong>Published:</strong> {{formatDate published}}</p>
@@ -49,7 +58,7 @@
 					
 					<p class="description">{{{formatHTML description}}}</p>
 					<p>
-						<a href="https://www.youtube.com/watch?v={{id}}" class="btn btn-primary" role="button" target="_blank">Watch</a>
+						<a href="{{youtubeVideo id}}" class="btn btn-primary" role="button" target="_blank">Watch</a>
 						<button class="btn btn-default watched" role="button">mark as watched</button>
 					</p>
 				</div>
