--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -225,7 +225,7 @@ a {
 	color: #222;
 }
 
-.control{
+/*.control{
 	position:relative;
 	
 	form{
@@ -233,24 +233,33 @@ a {
 		top: 7px;
 		right:0;
 	}
+}*/
+
+.page-header{
+	margin-top:10px;
+	
+	form{
+			margin-top: 25px;
+	}
 }
 
 .thumbnail {
 	.channel {
 		display: block;
 		font-weight:bold;
-		text-decoration: none;
 		margin: 5px auto;
 		max-width: 320px;
+		text-decoration: none;
 		
 		img{
 			display: inline-block;
 			height: 25px;
 		}
 	}
-	.caption {
+	
+	/*.caption {
 		overflow: hidden;
-	}
+	}*/
 	
 	h3{
 		margin-top:0;
@@ -262,18 +271,22 @@ a {
 }
 
 .thumb{
-	position: relative;
 	display: block;
 	max-width: 320px;
 	margin: auto;
+	position: relative;
+	
+	img{
+		width:320px;
+	}
 	
 	figcaption{
-		color: #fff;
-		position: absolute;
-		bottom: 5px;
-		right: 5px;
 		background-color: #222;
+		bottom: 5px;
+		color: #fff;
 		font-weight: bold;
+		position: absolute;
+		right: 5px;
 		opacity: .75;
 	}
 }
