--- a/app/views/videos.html
+++ b/app/views/videos.html
@@ -1,5 +1,5 @@
 
-<div class="row page-header">
+<div class="page-header clearfix">
 	<h1 class="col-sm-3">
 		Videos <span class="text-muted videos">{{videos.length}}</span>
 	</h1>
@@ -31,7 +31,6 @@
 		<button class="btn btn-default watched-all" role="button">mark all as watched</button>
 	</form>
 </div>
-
 
 <div class="row">
 	{{#videos}}
