--- a/app/views/profile.html
+++ b/app/views/profile.html
@@ -19,11 +19,11 @@
 				</div>
 				<div class="col-xs-12 divider text-center">
 					<div class="col-xs-12 col-sm-4 emphasis">
-						<h2><strong> {{../channels}} </strong></h2>
+						<h2><strong> {{../subscription.channels.length}} </strong></h2>
 						<p><small>Channels</small></p>
 					</div>
 					<div class="col-xs-12 col-sm-4 emphasis">
-						<h2><strong>{{../watched}}</strong></h2>
+						<h2><strong>{{../subscription.watched.lenth}}</strong></h2>
 						<p><small>Watched</small></p>
 					</div>
 					<div class="col-xs-12 col-sm-4 emphasis">
