fix profile page

--- a/app/views/profile.html
+++ b/app/views/profile.html
@@ -23,7 +23,7 @@
 						<p><small>Channels</small></p>
 					</div>
 					<div class="col-xs-12 col-sm-4 emphasis">
-						<h2><strong>{{../subscription.watched.lenth}}</strong></h2>
+						<h2><strong>{{../subscription.watched.length}}</strong></h2>
 						<p><small>Watched</small></p>
 					</div>
 					<div class="col-xs-12 col-sm-4 emphasis">
