add chrome theme color

--- a/app/views/templates/main.html
+++ b/app/views/templates/main.html
@@ -7,6 +7,7 @@
 	<meta name="keywords" content="Youtube, Youtube box, subscription, V3 API, V2 API, RSS Feed" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	
+	<meta name="theme-color" content="#cc181e" />
 	<meta name="mobile-web-app-capable" content="yes" />
 	<meta name="application-name" content="Youtube Box" />
 	<link rel="icon" sizes="192x192" href="img/icon.png" />
