--- a/app/views/templates/landing.html
+++ b/app/views/templates/landing.html
@@ -13,21 +13,21 @@
 	<link rel="icon" sizes="192x192" href="img/icon.png" />
 		
 	<meta name="apple-mobile-web-app-capable" content="yes" />
-	<meta name="apple-mobile-web-app-status-bar-style" content="black" />
-	<meta name="apple-mobile-web-app-title" content="Web Starter Kit" />
+	<meta name="apple-mobile-web-app-status-bar-style" content="#cc181e" />
+	<meta name="apple-mobile-web-app-title" content="Youtube Box" />
 	<link rel="apple-touch-icon" href="img/icon.png" />
 		
 	<link rel="shortcut icon" href="/favicon.ico" />
 	<title>{{title}}</title>
 
-	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
+	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
 	<link rel="stylesheet" href="/css/landing.css" />
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
 	<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Lato:400,700" />
 
 	<!--[if lt IE 9]>
-		<script src="//oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-		<script src="//oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
 	<![endif]-->
 </head>
 <body>
@@ -94,7 +94,7 @@
 		</div>
 	</footer>
 	
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 	<script src="/js/app.min.js"></script>
 		
 	{{>analytics}}
