--- a/app/views/templates/main.html
+++ b/app/views/templates/main.html
@@ -13,21 +13,21 @@
 	<link rel="icon" sizes="192x192" href="img/icon.png" />
 		
 	<meta name="apple-mobile-web-app-capable" content="yes" />
-	<meta name="apple-mobile-web-app-status-bar-style" content="black" />
-	<meta name="apple-mobile-web-app-title" content="Web Starter Kit" />
+	<meta name="apple-mobile-web-app-status-bar-style" content="#cc181e" />
+	<meta name="apple-mobile-web-app-title" content="Youtube Box" />
 	<link rel="apple-touch-icon" href="img/icon.png" />
 		
 	<link rel="shortcut icon" href="/favicon.ico" />
 	<title>{{title}}</title>
 
-	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
+	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
 	<!--link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css"-->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.4/simplex/bootstrap.min.css" >
+	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.6/simplex/bootstrap.min.css" >
 	<link rel="stylesheet" href="/css/style.css" />
 
 	<!--[if lt IE 9]>
-		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
 	<![endif]-->
 </head>
 <body>
@@ -76,8 +76,8 @@
 		
 	</div>
 	
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+	<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 	<script src="/js/app.min.js"></script>
 		
 	{{>analytics}}
