--- a/app/views/templates/landing.html
+++ b/app/views/templates/landing.html
@@ -18,7 +18,7 @@
 	<link rel="apple-touch-icon" href="img/icon.png" />
 		
 	<link rel="shortcut icon" href="/favicon.ico" />
-	<title>{{title}}</title>
+	<title>Youtube Box</title>
 
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
 	<link rel="stylesheet" href="/css/landing.css" />
