--- a/app/views/templates/main.html
+++ b/app/views/templates/main.html
@@ -48,6 +48,7 @@
 						<li class="{{active "/" ../path true}}"><a href="/">Videos</a></li>
 						<li><a href="/feed/{{youtube.id}}" target="_blank">Feed</a></li>
 						<li><a href="/sync/subscriptions" target="_blank">Sync Subscriptions</a></li>
+						<li><a href="/sync/cleanup/videos" target="_blank">Cleanup Videos</a></li>
 						<li class="dropdown">
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown">
 								{{name}} <b class="caret"></b>
