--- a/app/views/videos.html
+++ b/app/views/videos.html
@@ -65,6 +65,10 @@
 				<div class="caption">
 					<h3><a href="{{youtubeVideo _id}}" title="{{title}}">{{title }}</a></h3>
 					
+					{{#if watched}}
+						<p><strong>Watched:</strong> {{formatDate watched}}</p>
+					{{/if}}
+					
 					<div class="info clearfix">
 						<p class="pull-left"><strong>Published:</strong> {{formatDate published}}</p>
 						<p class="pull-right"><strong>Views:</strong> {{formatLargeNumber views 1}}</p>
