--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,48 +1,12 @@
 @charset "UTF-8";
 
-.form-signin {
-  max-width: 330px;
-  padding: 15px;
-  margin: 0 auto;
-}
-.form-signin .form-signin-heading,
-.form-signin .checkbox {
-  margin-bottom: 10px;
-}
-.form-signin .checkbox {
-  font-weight: normal;
-}
-.form-signin .form-control {
-  position: relative;
-  height: auto;
-  -webkit-box-sizing: border-box;
-	 -moz-box-sizing: border-box;
-		  box-sizing: border-box;
-  padding: 10px;
-  font-size: 16px;
-}
-.form-signin .form-control:focus {
-  z-index: 2;
-}
-.form-signin input[type="email"] {
-  margin-bottom: -1px;
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0;
-}
-.form-signin input[type="password"] {
-  margin-bottom: 10px;
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
-}
-
-
 /*
  * Base structure
  */
 
 /* Move down content because we have a fixed navbar that is 50px tall */
 body {
-  padding-top: 50px;
+	padding-top: 50px;
 }
 
 
@@ -51,8 +15,8 @@ body {
  */
 
 .sub-header {
-  padding-bottom: 10px;
-  border-bottom: 1px solid #eee;
+	padding-bottom: 10px;
+	border-bottom: 1px solid #eee;
 }
 
 /*
@@ -60,7 +24,7 @@ body {
  * Hide default border to remove 1px line.
  */
 .navbar-fixed-top {
-  border: 0;
+	border: 0;
 }
 
 /*
@@ -69,181 +33,167 @@ body {
 
 /* Hide for mobile, show later */
 .sidebar {
-  display: none;
-}
-@media (min-width: 768px) {
-  .sidebar {
-	position: fixed;
-	top: 51px;
-	bottom: 0;
-	left: 0;
-	z-index: 1000;
-	display: block;
-	padding: 20px;
-	overflow-x: hidden;
-	overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-	background-color: #f5f5f5;
-	border-right: 1px solid #eee;
-  }
+	display: none;
+	
+	@media (min-width: 768px) {
+		position: fixed;
+		top: 51px;
+		bottom: 0;
+		left: 0;
+		z-index: 1000;
+		display: block;
+		padding: 20px;
+		overflow-x: hidden;
+		overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+		background-color: #f5f5f5;
+		border-right: 1px solid #eee;
+	}
 }
 
 /* Sidebar navigation */
 .nav-sidebar {
-  margin-right: -21px; /* 20px padding + 1px border */
-  margin-bottom: 20px;
-  margin-left: -20px;
+	margin-right: -21px; /* 20px padding + 1px border */
+	margin-bottom: 20px;
+	margin-left: -20px;
+	
+	> li > a {
+		padding-right: 20px;
+		padding-left: 20px;
+	}
+	
+	.nav-sidebar > .active > a{
+		&, &:hover, &:focus{
+			color: #fff;
+			background-color: #428bca;
+		}
+	}
 }
-.nav-sidebar > li > a {
-  padding-right: 20px;
-  padding-left: 20px;
-}
-.nav-sidebar > .active > a,
-.nav-sidebar > .active > a:hover,
-.nav-sidebar > .active > a:focus {
-  color: #fff;
-  background-color: #428bca;
-}
-
 
 /*
  * Main content
  */
 
 .main {
-  padding: 20px;
-}
-@media (min-width: 768px) {
-  .main {
-	padding-right: 40px;
-	padding-left: 40px;
-  }
-}
-.main .page-header {
-  margin-top: 0;
+	padding: 20px;
+	
+	@media (min-width: 768px) {
+		padding-right: 40px;
+		padding-left: 40px;
+	}
+	
+	.page-header {
+		margin-top: 0;
+	}
 }
 
 .navbar-inverse {
-		
-  background-image: -webkit-linear-gradient(top, #3c3c3c 0%, #222 100%);
-  background-image:	  -o-linear-gradient(top, #3c3c3c 0%, #222 100%);
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#3c3c3c), to(#222));
-  background-image:		 linear-gradient(to bottom, #3c3c3c 0%, #222 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff3c3c3c', endColorstr='#ff222222', GradientType=0);
-  filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
-  background-repeat: repeat-x;
-}
-.navbar-inverse .navbar-nav > .open > a,
-.navbar-inverse .navbar-nav > .active > a {
-  background-image: -webkit-linear-gradient(top, #080808 0%, #0f0f0f 100%);
-  background-image:	  -o-linear-gradient(top, #080808 0%, #0f0f0f 100%);
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#080808), to(#0f0f0f));
-  background-image:		 linear-gradient(to bottom, #080808 0%, #0f0f0f 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff080808', endColorstr='#ff0f0f0f', GradientType=0);
-  background-repeat: repeat-x;
-  -webkit-box-shadow: inset 0 3px 9px rgba(0, 0, 0, .25);
-		  box-shadow: inset 0 3px 9px rgba(0, 0, 0, .25);
-}
-.navbar-inverse .navbar-brand,
-.navbar-inverse .navbar-nav > li > a {
-	color: #9d9d9d;
-  text-shadow: 0 -1px 0 rgba(0, 0, 0, .25);
-}
-.navbar-static-top,
-.navbar-fixed-top,
-.navbar-fixed-bottom {
-  border-radius: 0;
-}
-@media (max-width: 767px) {
-  .navbar .navbar-nav .open .dropdown-menu > .active > a,
-  .navbar .navbar-nav .open .dropdown-menu > .active > a:hover,
-  .navbar .navbar-nav .open .dropdown-menu > .active > a:focus {
-	color: #fff;
-	background-image: -webkit-linear-gradient(top, #337ab7 0%, #2e6da4 100%);
-	background-image:	  -o-linear-gradient(top, #337ab7 0%, #2e6da4 100%);
-	background-image: -webkit-gradient(linear, left top, left bottom, from(#337ab7), to(#2e6da4));
-	background-image:		 linear-gradient(to bottom, #337ab7 0%, #2e6da4 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff337ab7', endColorstr='#ff2e6da4', GradientType=0);
+	background-image: linear-gradient(#3c3c3c 0%, #222 100%);
 	background-repeat: repeat-x;
-  }
+	
+	.navbar-nav{
+		
+		.open > a, > .active > a {
+			background-image: linear-gradient(to bottom, #080808 0%, #0f0f0f 100%);
+			background-repeat: repeat-x;
+			box-shadow: inset 0 3px 9px rgba(0, 0, 0, .25);
+		}
+		
+		@media (max-width: 767px) {
+			.open .dropdown-menu > .active > a {
+				&, &:hover, &:focus {
+					color: #fff;
+					background-image: linear-gradient(to bottom, #337ab7 0%, #2e6da4 100%);
+					background-repeat: repeat-x;
+				}
+			}
+		}
+	}
+	
+	.navbar-brand, .navbar-nav > li > a {
+		color: #9d9d9d;
+		text-shadow: 0 -1px 0 rgba(0, 0, 0, .25);
+	}
 }
 
+.navbar-static-top, .navbar-fixed-top, .navbar-fixed-bottom { border-radius: 0; }
 
-/*  Bootstrap Clearfix */
 
-/*  Tablet  */
+/*	Bootstrap Clearfix */
+
+/*	Tablet	*/
 @media (min-width:767px){
 
-  /* Column clear fix */
-  .col-lg-1:nth-child(12n+1),
-  .col-lg-2:nth-child(6n+1),
-  .col-lg-3:nth-child(4n+1),
-  .col-lg-4:nth-child(3n+1),
-  .col-lg-6:nth-child(2n+1),
-  .col-md-1:nth-child(12n+1),
-  .col-md-2:nth-child(6n+1),
-  .col-md-3:nth-child(4n+1),
-  .col-md-4:nth-child(3n+1),
-  .col-md-6:nth-child(2n+1){
-	clear: none;
-  }
-  .col-sm-1:nth-child(12n+1),
-  .col-sm-2:nth-child(6n+1),
-  .col-sm-3:nth-child(4n+1),
-  .col-sm-4:nth-child(3n+1),
-  .col-sm-6:nth-child(2n+1){
-	clear: left;
-  }
+	/* Column clear fix */
+	.col-lg-1:nth-child(12n+1),
+	.col-lg-2:nth-child(6n+1),
+	.col-lg-3:nth-child(4n+1),
+	.col-lg-4:nth-child(3n+1),
+	.col-lg-6:nth-child(2n+1),
+	.col-md-1:nth-child(12n+1),
+	.col-md-2:nth-child(6n+1),
+	.col-md-3:nth-child(4n+1),
+	.col-md-4:nth-child(3n+1),
+	.col-md-6:nth-child(2n+1){
+		clear: none;
+	}
+	.col-sm-1:nth-child(12n+1),
+	.col-sm-2:nth-child(6n+1),
+	.col-sm-3:nth-child(4n+1),
+	.col-sm-4:nth-child(3n+1),
+	.col-sm-6:nth-child(2n+1){
+		clear: left;
+	}
 }
 
 
-/*  Medium Desktop  */
+/*	Medium Desktop	*/
 @media (min-width:992px){
 
-  /* Column clear fix */
-  .col-lg-1:nth-child(12n+1),
-  .col-lg-2:nth-child(6n+1),
-  .col-lg-3:nth-child(4n+1),
-  .col-lg-4:nth-child(3n+1),
-  .col-lg-6:nth-child(2n+1),
-  .col-sm-1:nth-child(12n+1),
-  .col-sm-2:nth-child(6n+1),
-  .col-sm-3:nth-child(4n+1),
-  .col-sm-4:nth-child(3n+1),
-  .col-sm-6:nth-child(2n+1){
-	clear: none;
-  }
-  .col-md-1:nth-child(12n+1),
-  .col-md-2:nth-child(6n+1),
-  .col-md-3:nth-child(4n+1),
-  .col-md-4:nth-child(3n+1),
-  .col-md-6:nth-child(2n+1){
-	clear: left;
-  }
+	/* Column clear fix */
+	.col-lg-1:nth-child(12n+1),
+	.col-lg-2:nth-child(6n+1),
+	.col-lg-3:nth-child(4n+1),
+	.col-lg-4:nth-child(3n+1),
+	.col-lg-6:nth-child(2n+1),
+	.col-sm-1:nth-child(12n+1),
+	.col-sm-2:nth-child(6n+1),
+	.col-sm-3:nth-child(4n+1),
+	.col-sm-4:nth-child(3n+1),
+	.col-sm-6:nth-child(2n+1){
+		clear: none;
+	}
+	.col-md-1:nth-child(12n+1),
+	.col-md-2:nth-child(6n+1),
+	.col-md-3:nth-child(4n+1),
+	.col-md-4:nth-child(3n+1),
+	.col-md-6:nth-child(2n+1){
+		clear: left;
+	}
 }
 
-/*  Large Desktop  */
+/*	Large Desktop	*/
 @media (min-width:1200px){
 
-  /* Column clear fix */
-  .col-md-1:nth-child(12n+1),
-  .col-md-2:nth-child(6n+1),
-  .col-md-3:nth-child(4n+1),
-  .col-md-4:nth-child(3n+1),
-  .col-md-6:nth-child(2n+1),
-  .col-sm-1:nth-child(12n+1),
-  .col-sm-2:nth-child(6n+1),
-  .col-sm-3:nth-child(4n+1),
-  .col-sm-4:nth-child(3n+1),
-  .col-sm-6:nth-child(2n+1){
-	clear: none;
-  }
-  .col-lg-1:nth-child(12n+1),
-  .col-lg-2:nth-child(6n+1),
-  .col-lg-3:nth-child(4n+1),
-  .col-lg-4:nth-child(3n+1),
-  .col-lg-6:nth-child(2n+1){
-	clear: left;
-  }
+	/* Column clear fix */
+	.col-md-1:nth-child(12n+1),
+	.col-md-2:nth-child(6n+1),
+	.col-md-3:nth-child(4n+1),
+	.col-md-4:nth-child(3n+1),
+	.col-md-6:nth-child(2n+1),
+	.col-sm-1:nth-child(12n+1),
+	.col-sm-2:nth-child(6n+1),
+	.col-sm-3:nth-child(4n+1),
+	.col-sm-4:nth-child(3n+1),
+	.col-sm-6:nth-child(2n+1){
+		clear: none;
+	}
+	.col-lg-1:nth-child(12n+1),
+	.col-lg-2:nth-child(6n+1),
+	.col-lg-3:nth-child(4n+1),
+	.col-lg-4:nth-child(3n+1),
+	.col-lg-6:nth-child(2n+1){
+		clear: left;
+	}
 }
 
 a {
@@ -264,7 +214,7 @@ a {
 	margin-top: 10px;
 	
 	form{
-			margin-top: 25px;
+		margin-top: 25px;
 	}
 }
 
@@ -297,6 +247,7 @@ a {
 .thumb{
 	display: block;
 	max-width: 320px;
+	max-height: 180px;
 	margin: auto;
 	position: relative;
 	
@@ -348,8 +299,6 @@ a {
 		border-top:1px solid rgba(0,0,0,0.1);
 	}
 }
-
-
 
 .emphasis{
 	border-top: 4px solid transparent;
