--- a/app/views/templates/main.html
+++ b/app/views/templates/main.html
@@ -10,18 +10,16 @@
 	<meta name="theme-color" content="#cc181e" />
 	<meta name="mobile-web-app-capable" content="yes" />
 	<meta name="application-name" content="Youtube Box" />
-	<link rel="icon" sizes="192x192" href="img/icon.png" />
+	<link rel="icon" sizes="192x192" href="/img/icon.png" />
 		
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 	<meta name="apple-mobile-web-app-status-bar-style" content="#cc181e" />
 	<meta name="apple-mobile-web-app-title" content="Youtube Box" />
-	<link rel="apple-touch-icon" href="img/icon.png" />
+	<link rel="apple-touch-icon" href="/img/icon.png" />
 		
 	<link rel="shortcut icon" href="/favicon.ico" />
 	<title>{{title}} - Youtube Box</title>
 
-	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
-	<!--link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css"-->
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.6/simplex/bootstrap.min.css" >
 	<link rel="stylesheet" href="/css/style.css" />
 
